fix button on mobile devices

--- a/wp-content/themes/aigi/assets/css/reding-list.css
+++ b/wp-content/themes/aigi/assets/css/reding-list.css
@@ -1,3 +1,10 @@
 .landing-page .post-tile__wrap{
     margin-left: 0;
 }
+
+/* На мобильных устройствах (767px выбрано, чтобы работал пример) */
+@media screen and (max-width: 767px) {
+    .simplefavorite-button. span {
+        display: none;
+    }
+}
